added save to section_name

--- a/section/templates/section/inc/menu/_currency.html
+++ b/section/templates/section/inc/menu/_currency.html
@@ -1,47 +1,52 @@
-<div
-    x-data
-    x-init="Alpine.store('currency').init()"
-    class="main_block menu currency"
-    :style="Alpine.store('currency').open ? 'padding-bottom: 5px;' : ''"
->
+<div class="blocks">
+    <div
+        x-data
+        x-init="Alpine.store('currency').init()"
+        class="main_block menu currency"
+        :style="Alpine.store('currency').open ? 'padding-bottom: 5px;' : ''"
+    >
 
-    <div class="head" @click="Alpine.store('currency').currencyToggle()">
-        <div class="title">Валюта:</div>
-        <div class="name">
-            <div x-text="Alpine.store('currency').getCurrentCurrency?.code || '—'"></div>
-            <div class="arrow fleep" :class="{ 'fleep180x': Alpine.store('currency').open }">
+        <div class="head" @click="Alpine.store('currency').currencyToggle()">
+            <div class="title">Валюта:</div>
+            <div class="name">
+                <div x-text="Alpine.store('currency').getCurrentCurrency?.code || '—'"></div>
+                <div class="arrow fleep" :class="{ 'fleep180x': Alpine.store('currency').open }">
 
-            <template x-if="Alpine.store('currency').getCurrentCurrency?.code">
-                {% include 'svg/arrow_down.svg' %}
-            </template>
+                <template x-if="Alpine.store('currency').getCurrentCurrency?.code">
+                    {% include 'svg/arrow_down.svg' %}
+                </template>
 
+                </div>
             </div>
         </div>
-    </div>
 
-    <div x-show="Alpine.store('currency').open" class="choose" x-transition>
-        <div class="info">*для отображения графиков</div>
+        <div x-show="Alpine.store('currency').open" class="choose" x-transition>
+            <div class="info">*для отображения графиков</div>
 
-        <div class="search">
-            <div class="id">{% include 'svg/search.svg' %}</div>
-            <input
-                type="search"
-                inputmode="search"
-                enterkeyhint="search"
-                placeholder="Название валюты"
-                x-model="Alpine.store('currency').query"
-            >
-        </div>
-
-        <div class="groups" x-ref="currencyList">
-            <template x-for="currency in Alpine.store('currency').getFilteredCurrencies" :key="currency.code">
-                <div
-                    class="option_group"
-                    :class="{ 'active': currency.code === Alpine.store('currency').getCurrentCurrency?.code }"
+            <div class="search">
+                <div class="id">{% include 'svg/search.svg' %}</div>
+                <input
+                    type="search"
+                    inputmode="search"
+                    enterkeyhint="search"
+                    placeholder="Название валюты"
+                    x-model="Alpine.store('currency').query"
                 >
-                    <div class="code" x-text="currency.code"></div>
-                </div>
-            </template>
+            </div>
+
+            <div class="groups" x-ref="currencyList">
+                <template x-for="currency in Alpine.store('currency').getFilteredCurrencies" :key="currency.code">
+                    <div
+                        class="option_group"
+                        :class="{ 'active': currency.code === Alpine.store('currency').getCurrentCurrency?.code }"
+                    >
+                        <div class="code" x-text="currency.code"></div>
+                    </div>
+                </template>
+            </div>
         </div>
+
+
     </div>
+    <div class="main_block save">Сохранить</div>
 </div>
