--- a/section/templates/section/inc/tabs/_main.html
+++ b/section/templates/section/inc/tabs/_main.html
@@ -1,4 +1,4 @@
-<div x-show="$store.tabs.tab === 'main'" style="display: none;">
+<div x-show="$store.tabs.tab === 'main'" style="display: none;" class="tab">
 
     {% include 'section/inc/main/_periods.html' %}
     {% include 'section/inc/main/_expenses.html' %}
