--- a/section/templates/section/index.html
+++ b/section/templates/section/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
+
     {% include 'section/inc/_header.html' %}
     <main>
         {% include 'section/inc/tabs/_account.html' %}
         {% include 'section/inc/tabs/_main.html' %}
         {% include 'section/inc/tabs/_menu.html' %}
     </main>
+
 {% endblock %}
