--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -35,13 +35,15 @@ html, body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    min-height: calc(100vh + 30px);
-    height: 120%;
+    min-height: 100svh;
     color: var(--main_text_color)
-
+}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 main {
-    padding-bottom: var(--default_block_margin_bottom);
 }
 input {
     border: none;
@@ -104,6 +106,13 @@ header {
     padding: var(--default_block_padding);
     box-shadow: var(--default_block_box_shadow);
 }
+& .blocks {
+    & .save {
+        text-align: center;
+        text-transform: uppercase;
+        background-color: var(--main_green);
+    }
+}
 .main_block {
     & .over_block {
         margin: 0;
@@ -117,7 +126,13 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+        & .input {
+            display: flex;
+            align-items: center;
+            & svg {
+                margin-left: 5px;
+            }
+        }
         & label {
             font-weight: bold;
         }
@@ -822,4 +837,28 @@ input[type="checkbox"] {
 
 
     }
+}
+
+.tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    & .content {}
+}
+.down_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: var(--default_block_padding) 0;
+    background-color: var(--main_green);
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+
+    position: sticky;
+    bottom: 0;
+
+    width: 100%;
+    height: 40px;
 }
