--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
+    <script src="{% static 'js/cookies.js' %}" defer></script>
     <script src="{% static 'js/detect_sticky.js' %}" defer></script>
     <script src="{% static 'js/init.js' %}" defer></script>
     <script src="{% static 'js/tabs.js' %}" defer></script>
