added telegram-web-app js

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <title>{% block title %}{% endblock %}</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <script src="{% static 'js/cookies.js' %}" defer></script>
     <script src="{% static 'js/detect_sticky.js' %}" defer></script>
     <script src="{% static 'js/init.js' %}" defer></script>
