--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -35,20 +35,19 @@ html, body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    min-height: 100svh;
-    color: var(--main_text_color)
+    color: var(--main_text_color);
+    max-height: 50svh;
 }
 
 html {
-    background-color: var(--main_purple);
+/*     background-color: var(--main_purple); */
 }
 
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: calc(var(--tg-safe-area-inset-top) + var(--header_height) + var(--tg-content-safe-area-inset-bottom));
-    min-height: calc(100svh - var(--tg-safe-area-inset-top));
+    margin-top: calc(var(--tg-safe-area-inset-top) + var(--tg-content-safe-area-inset-top));
 }
 
 body::before {
@@ -60,6 +59,16 @@ body::before {
     background: transparent;
     z-index: 100;
     backdrop-filter: blur(4px);
+}
+
+body::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    margin-top: -500px;
+    background: var(--main_purple);
+    z-index: 99;
 }
 main {
 }
