added header svg position

--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -105,8 +105,10 @@ header {
          }
 
          & svg {
-             width: 30px;
-             height: 30px;
+            display: flex;
+            align-items: center;
+            width: 30px;
+            height: 30px;
          }
      }
 
