--- a/telegram/templates/telegram/check.html
+++ b/telegram/templates/telegram/check.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block main %}
+{% block body %}
     <script>
         sendTelegramWebData(url='{% url "telegram_authenticate_web_app" %}')
     </script>
