--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body x-data="tabsHandler()" x-init="init_tabs()" style="">
+{% block body %}
     <div class="content">
         {% block content %}
         {% endblock %}
@@ -35,5 +36,6 @@
 
     {% block body_bottom %}
     {% endblock %}
+{% endblock %}
 </body>
 </html>
