fix check web app

--- a/telegram/templates/telegram/check.html
+++ b/telegram/templates/telegram/check.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
     <script>
-        sendTelegramWebData(url='{% url "telegram_authenticate_web_app" %}')
+        document.addEventListener('DOMContentLoaded', () => {
+            sendTelegramWebData(url='{% url "telegram_authenticate_web_app" %}')
+        })
     </script>
+
 {% endblock %}
