--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -859,6 +859,9 @@ input[type="checkbox"] {
         transition: background-color .5s;
         box-shadow: var(--default_block_box_shadow);
 
+
+
+
         &.active {
             background-color: var(--main_purple);
             /*animation: shrink-bounce 0.5s ease;*/
@@ -870,9 +873,15 @@ input[type="checkbox"] {
         }
         &:first-of-type {
             margin-right: 5px;
+            border-radius: var(--default_block_border_radius) 5px 5px var(--default_block_border_radius);
         }
         &:last-of-type {
             margin-left: 5px;
+            border-radius:  5px  var(--default_block_border_radius) var(--default_block_border_radius) 5px ;
+        }
+        &:only-of-type {
+            border-radius: var(--default_block_border_radius);
+            margin: 0;
         }
 
 
