--- a/section/templates/section/inc/tabs/_main.html
+++ b/section/templates/section/inc/tabs/_main.html
@@ -1,8 +1,28 @@
-<div x-show="$store.tabs.tab === 'main'" style="display: none;" class="tab">
+<!-- Блок с данными -->
+<template x-if="
+    $store.tabs.tab === 'main' &&
+    Alpine.store('appData').current_section &&
+    Alpine.store('receipts_feed').sections[Alpine.store('appData').current_section?.id] &&
+    Alpine.store('receipts_feed').getCurrentPageItems().length > 0 &&
+    !Alpine.store('receipts_feed').sections[Alpine.store('appData').current_section?.id].loading
+">
+    <div class="tab">
+        {% include 'section/inc/main/_periods.html' %}
+        {% include 'section/inc/main/_expenses.html' %}
+        {% include 'section/inc/main/_chart.html' %}
+        {% include 'section/inc/main/feed/_feed.html' %}
+    </div>
+</template>
 
-    {% include 'section/inc/main/_periods.html' %}
-    {% include 'section/inc/main/_expenses.html' %}
-    {% include 'section/inc/main/_chart.html' %}
-    {% include 'section/inc/main/feed/_feed.html' %}
-
-</div>
+<!-- Блок "Нет данных" -->
+<template x-if="
+    $store.tabs.tab === 'main' &&
+    Alpine.store('appData').current_section &&
+    Alpine.store('receipts_feed').sections[Alpine.store('appData').current_section?.id] &&
+    Alpine.store('receipts_feed').getCurrentPageItems().length === 0 &&
+    !Alpine.store('receipts_feed').sections[Alpine.store('appData').current_section?.id].loading
+">
+    <div class="tab">
+        {% include 'section/no_data.html' %}
+    </div>
+</template>
