--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -60,7 +60,7 @@ html, body {
 }
 
 html {
-/*     background-color: var(--main_purple); */
+    /*     background-color: var(--main_purple); */
 }
 
 body {
@@ -90,8 +90,10 @@ body::after {
     background: var(--main_purple);
     z-index: 99;
 }
+
 main {
 }
+
 input {
     border: none;
     outline: none;
@@ -111,21 +113,22 @@ header {
     padding-bottom: 10px;
     position: relative;
 
-     & .icon {
-         display: flex;
-         justify-content: center;
-         align-content: center;
-         cursor: pointer;
-         --side-margin: 20px;
+    & .icon {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        cursor: pointer;
+        --side-margin: 20px;
 
-         &:first-child {
-             margin-left: var(--side-margin);
-         }
-         &:last-child {
-             margin-right: var(--side-margin);
-         }
+        &:first-child {
+            margin-left: var(--side-margin);
+        }
 
-         & svg {
+        &:last-child {
+            margin-right: var(--side-margin);
+        }
+
+        & svg {
             display: flex;
             align-items: center;
             width: 25px;
@@ -134,8 +137,8 @@ header {
             & g {
                 fill: var(--header_text_color);
             }
-         }
-     }
+        }
+    }
 
     & a {
         text-decoration: none;
@@ -145,6 +148,7 @@ header {
         user-select: none;
     }
 }
+
 .fleep {
     transition: transform .2s;
 
@@ -160,6 +164,7 @@ header {
     padding: var(--default_block_padding);
     box-shadow: var(--default_block_box_shadow);
 }
+
 & .blocks {
     & .save {
         text-align: center;
@@ -167,26 +172,32 @@ header {
         background-color: var(--main_green);
     }
 }
+
 .main_block {
     & .over_block {
         margin: 0;
     }
+
     &.as_caption {
         margin: calc(var(--default_block_margin_bottom_int) * -2px) 0 var(--default_block_margin_bottom) 0;
         padding: calc(var(--default_block_margin_bottom_int) * 2px) var(--default_block_margin_LR) 10px var(--default_block_margin_LR);
         z-index: -10;
     }
+
     &.section_name {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         & .input {
             display: flex;
             align-items: center;
+
             & svg {
                 margin-left: 5px;
             }
         }
+
         & label {
             font-weight: bold;
         }
@@ -197,6 +208,7 @@ header {
             padding: 0;
             color: var(--main_text_color);
         }
+
         & svg {
             width: 10px;
             height: 10px;
@@ -214,12 +226,15 @@ header {
             justify-content: space-between;
 
             font-size: 20px;
+
             & .title {
                 font-weight: bold;
             }
+
             & .value {
             }
         }
+
         & .note {
             font-size: 12px;
             background-color: var(--main_purple);
@@ -228,10 +243,12 @@ header {
             border-radius: 0 0 var(--default_block_border_radius) var(--default_block_border_radius);
             color: var(--main_text_color_active);
         }
+
         & button {
             background-color: var(--block_bg);
         }
     }
+
     &.chart {
         position: relative;
 
@@ -254,7 +271,6 @@ header {
                 border-radius: 5px;
                 background-color: var(--main_btn_bg_color);
                 transition: background-color 0.5s;
-
 
 
                 &.active {
@@ -294,6 +310,7 @@ header {
                 &.disabled {
                     color: rgb(82 82 82 / 30%);
                     opacity: 0.7;
+
                     & .legend-color-box {
                         opacity: 0.3;
                     }
@@ -313,6 +330,7 @@ header {
         }
     }
 }
+
 #chartjs-tooltip {
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
@@ -326,10 +344,12 @@ header {
     pointer-events: none;
     z-index: 1000;
 }
+
 #myChart {
     width: 100%;
     height: 1500px;
 }
+
 .over_block {
     background-color: var(--main_btn_bg_color);
     border-radius: var(--default_block_mini_border_radius);
@@ -356,9 +376,11 @@ header {
             padding-left: var(--nav_btn_width);
 
         }
+
         & .nav_btn {
             width: var(--nav_btn_width);
             height: var(--nav_btn_width);
+
             & svg {
                 width: var(--nav_btn_width);
                 height: var(--nav_btn_width);
@@ -366,6 +388,7 @@ header {
             }
         }
     }
+
     &.currency {
         & .head {
             display: flex;
@@ -375,15 +398,18 @@ header {
             & .title {
                 font-weight: bold;
             }
+
             & .name {
                 display: flex;
 
                 & .arrow {
                     margin: 0 0 0 5px;
                 }
+
                 & svg {
                     height: 10px;
                     width: 10px;
+
                     & g {
                         fill: var(--main_text_color);
                     }
@@ -399,12 +425,14 @@ header {
             & .top {
                 display: flex;
                 flex-direction: row;
+
                 & .data {
                     width: 70%;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
                 }
+
                 & .photo {
                     width: 30%;
                     display: flex;
@@ -444,13 +472,16 @@ header {
                         &:first-child {
                             margin-left: 0;
                         }
+
                         &:last-child {
                             margin-right: 0;
                         }
                     }
+
                     & .accept {
                         background-color: #00bf63;
                     }
+
                     & .dismiss {
                         background-color: #fe5d5d;
                     }
@@ -472,11 +503,13 @@ header {
         align-items: center;
         width: 40px;
         height: 40px;
+
         & svg {
             width: 20px;
             fill: var(--main_text_color);
         }
     }
+
     & .search {
         display: flex;
         flex-direction: row;
@@ -496,11 +529,13 @@ header {
             font-size: 16px;
             margin: 0;
             padding: 0;
+
             &::placeholder {
                 text-decoration: underline;
             }
         }
     }
+
     & .groups {
         max-height: calc(calc(var(--item-height) * 5) - var(--default_block_margin_bottom) + 10px);
         overflow-y: auto;
@@ -535,6 +570,7 @@ header {
         &.active {
             border: 2px solid var(--main_purple);
         }
+
         &.choose {
             border: 2px dashed var(--main_purple);
         }
@@ -548,10 +584,12 @@ header {
         font-weight: 500;
         margin-bottom: 5px;
     }
+
     .link {
         height: 20px;
         padding-top: 0;
         padding-bottom: 0;
+
         & a {
             text-decoration: none;
             color: var(--main_text_color);
@@ -559,6 +597,7 @@ header {
         }
     }
 }
+
 input[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
@@ -594,20 +633,25 @@ input[type="checkbox"] {
 }
 
 
-
-
 .animate-icon {
     animation: shrink-bounce 0.25s ease;
-  }
+}
 
 @keyframes shrink-bounce {
-0% { transform: scale(1); }
-50% { transform: scale(0.8); }
-100% { transform: scale(1); }
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 #feed {
     position: relative;
+
     & .header {
         height: 30px;
         font-size: 20px;
@@ -627,6 +671,7 @@ input[type="checkbox"] {
             &:first-child {
                 justify-content: start;
             }
+
             &:last-child {
                 justify-content: end;
             }
@@ -641,6 +686,7 @@ input[type="checkbox"] {
             & .block .photo_block {
                 margin-right: var(--default_block_margin_LR);
             }
+
             & .block .size {
                 margin-left: var(--default_block_margin_LR);
             }
@@ -652,6 +698,7 @@ input[type="checkbox"] {
             font-size: 17px;
             padding: 0;
             transition: margin .5s;
+
             & select {
                 height: 100%;
                 padding: 0 5px;
@@ -677,6 +724,7 @@ input[type="checkbox"] {
                 }
             }
         }
+
         & .photo_block {
             overflow: hidden;
             width: 30px;
@@ -686,6 +734,7 @@ input[type="checkbox"] {
             align-items: center;
             transition: margin .5s;
         }
+
         & .photo {
             background-color: var(--second_block_bg);
             height: 100%;
@@ -700,12 +749,13 @@ input[type="checkbox"] {
             & svg {
                 width: 20px;
                 height: 20px;
+
                 & g {
                     fill: var(--main_text_color);
                 }
             }
 
-              &::before {
+            &::before {
                 content: "";
                 position: absolute;
                 top: 0;
@@ -716,22 +766,27 @@ input[type="checkbox"] {
                 transform: rotate(45deg);
                 transform-origin: left;
                 transition: width 0.5s;
-              }
-              &.active::before {
+            }
+
+            &.active::before {
                 width: 0;
-              }
+            }
 
         }
     }
+
     & .receipt {
         margin: var(--default_block_margin_bottom) var(--default_block_margin_LR);
+
         & .shop {
             margin-bottom: var(--default_block_margin_bottom);
+
             & .name {
                 font-size: 15px;
                 font-weight: bold;
                 text-align: center;
             }
+
             & .address {
                 margin-top: 5px;
                 font-size: 10px;
@@ -739,6 +794,7 @@ input[type="checkbox"] {
                 text-align: center;
             }
         }
+
         & .photo {
             --border-radius: 10px;
             border-radius: var(--border-radius);
@@ -751,6 +807,7 @@ input[type="checkbox"] {
             &::-webkit-scrollbar {
                 display: none;
             }
+
             & img {
                 width: 100%;
                 height: auto;
@@ -763,6 +820,7 @@ input[type="checkbox"] {
         & .items ul {
             padding: 0;
             margin: 0;
+
             & li {
                 display: flex;
                 justify-content: space-between;
@@ -771,31 +829,38 @@ input[type="checkbox"] {
                 padding: var(--default_block_padding);
                 border-radius: 10px;
                 box-shadow: var(--default_block_box_shadow);
+
                 &:first-child {
                     margin-top: 0;
                 }
+
                 & .col {
                     display: flex;
                     flex-direction: column;
 
                 }
+
                 & .name {
                     font-size: 13px;
                     font-weight: 500;
                 }
+
                 & .category {
                     font-size: 8px;
                 }
+
                 & .price {
                     display: flex;
                     align-items: center;
                     font-size: 16px;
                     font-weight: 500;
                 }
+
                 &.total {
                     & .name {
                         font-size: 16px;
                     }
+
                     & .total_value {
                         font-size: 16px;
                     }
@@ -803,10 +868,12 @@ input[type="checkbox"] {
                 }
             }
         }
+
         & img {
             max-width: 100%;
             height: 200px;
         }
+
         & .date {
             opacity: 0.6;
             padding: 0 5px 0 0;
@@ -818,16 +885,20 @@ input[type="checkbox"] {
         }
     }
 }
+
 #paginator {
     margin-bottom: var(--default_block_margin_bottom);
     padding: var(--default_block_padding);
+
     .paginator_buttons {
         display: flex;
         justify-content: center;
+
         & svg {
             width: 15px;
             height: 15px;
         }
+
         & button {
             border-radius: 5px;
             border: none;
@@ -854,30 +925,35 @@ input[type="checkbox"] {
             &.previous {
                 box-shadow: none;
                 background-color: transparent;
+
                 & svg {
                     transform: rotate(90deg);
                 }
             }
+
             &.next {
                 box-shadow: none;
                 background-color: transparent;
+
                 & svg {
                     transform: rotate(-90deg);
                 }
             }
+
             &.next,
             &.previous {
                 opacity: 0.2;
+
                 &.active {
                     opacity: 1;
                 }
             }
 
 
-
         }
     }
 }
+
 #expensesPeriods {
     display: flex;
     flex-direction: row;
@@ -901,8 +977,6 @@ input[type="checkbox"] {
         box-shadow: var(--default_block_box_shadow);
 
 
-
-
         &.active {
             background-color: var(--main_purple);
             color: var(--main_text_color_active);
@@ -913,14 +987,17 @@ input[type="checkbox"] {
         &:last-of-type {
             margin: 0;
         }
+
         &:first-of-type {
             margin-right: 5px;
             border-radius: var(--default_block_border_radius) 5px 5px var(--default_block_border_radius);
         }
+
         &:last-of-type {
             margin-left: 5px;
-            border-radius:  5px  var(--default_block_border_radius) var(--default_block_border_radius) 5px ;
+            border-radius: 5px var(--default_block_border_radius) var(--default_block_border_radius) 5px;
         }
+
         &:only-of-type {
             border-radius: var(--default_block_border_radius);
             margin: 0;
@@ -934,8 +1011,11 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    & .content {}
+
+    & .content {
+    }
 }
+
 .down_btn {
     display: flex;
     align-items: center;
@@ -957,6 +1037,7 @@ input[type="checkbox"] {
 .no_data {
     padding: var(--default_block_padding);
     margin: 0 var(--default_block_margin_LR) var(--default_block_margin_bottom) var(--default_block_margin_LR);
+
     & .receipt_in_hand {
         width: 59%;
         overflow: hidden;
@@ -1001,8 +1082,10 @@ input[type="checkbox"] {
             }
         }
     }
+
     & .text {
         font-size: 13px;
+
         & .caption {
             font-size: 16px;
             text-align: center;
