--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -329,6 +329,19 @@ header {
             border-radius: 5px;
         }
     }
+
+    &.add {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & a {
+            text-align: center;
+            text-decoration: none;
+            text-transform: uppercase;
+            width: 100%;
+            color: var(--main_text_color);
+        }
+    }
 }
 
 #chartjs-tooltip {
