--- a/section/templates/section/inc/main/feed/_receipts.html
+++ b/section/templates/section/inc/main/feed/_receipts.html
@@ -8,7 +8,7 @@
                 <div x-show="receipt.shop?.address" class="address" x-text="receipt.shop.address"></div>
             </div>
 
-            <template x-if="feed.showPhotos && receipt?.photo">
+            <template x-show="feed.showPhotos && receipt?.photo">
                 <div class="photo">
                     <img :src="receipt.photo" alt="Фото чека" loading="lazy">
                 </div>
