added WebApp.close() when user click to add member

--- a/section/templates/section/inc/menu/_add_member.html
+++ b/section/templates/section/inc/menu/_add_member.html
@@ -33,6 +33,9 @@
     x-show="meId && ownerId && meId === ownerId">
 
     <a  href="#"
-        @click.prevent="window.Telegram.WebApp.openTelegramLink(startUrl)"
+        @click.prevent="
+        window.Telegram.WebApp.openTelegramLink(startUrl);
+        window.Telegram.WebApp.close();
+"
     >Добавить участника</a>
 </div>
