change if to show in receipt photo

--- a/section/templates/section/inc/main/feed/_receipts.html
+++ b/section/templates/section/inc/main/feed/_receipts.html
@@ -8,11 +8,9 @@
                 <div x-show="receipt.shop?.address" class="address" x-text="receipt.shop.address"></div>
             </div>
 
-            <template x-show="feed.showPhotos && receipt?.photo">
-                <div class="photo">
-                    <img :src="receipt.photo" alt="Фото чека" loading="lazy">
-                </div>
-            </template>
+            <div class="photo" x-show="feed.showPhotos && receipt?.photo">
+                <img :src="receipt.photo" alt="Фото чека" loading="lazy">
+            </div>
 
             <div class="items">
                 <ul>
